fix double scrollbar bug, placeholder text more transparent

--- a/server/public/layout.css
+++ b/server/public/layout.css
@@ -18,7 +18,7 @@ html {
 
 /* Firefox */
 * {
-  scrollbar-width: auto;
+  /* scrollbar-width: auto; */
   scrollbar-color: #202225 #2e3338;
 }
 
